; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_f_wipe.c_wipe_initColorXForm.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_f_wipe.c_wipe_initColorXForm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wipe_scr = common dso_local global i32 0, align 4
@wipe_scr_start = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wipe_initColorXForm(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @wipe_scr, align 4
  %8 = load i32, i32* @wipe_scr_start, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = mul nsw i32 %9, %10
  %12 = call i32 @memcpy(i32 %7, i32 %8, i32 %11)
  ret i32 0
}

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
